# maud_tailwind_htmx_axum_sqlx_postgres

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.sqlx/: query-0c4002b672998b84c9d8c02cc84a61dcc1b220576020c090d6ef62de9eb3d2c6.json  query-787161395a563b3569c2da7a9f8a741ec3763790c94c1768ee1ce75554821c89.json  query-a75dc001afd5e62be6c07a9a2bb54e568e04bb40f10f3af931ca48cb6ab1efbc.json  query-bb0099af253313436dfaa02132f61891e08b4400d8b7a73e7af391e31aeabae7.json  query-d132448e77634a80695651cc7bf0207e7e29faffae244ad5d2b624fa0c61b8a4.json  query-efa7b0d2eed28ce72deb9ab8024f835214692fae36101518a790ebf9f0d4e2f5.json
migrations/: 20250101000000_initial_schema.sql  20250111000000_create_orders.sql  20251105054430_remove_password_from_users.sql  20251105054439_create_magic_links_table.sql
src/: auth.rs  config.rs  constants.rs  email.rs  email_templates.rs  flash.rs  formatting.rs  magic_link.rs  main.rs  paths.rs  validation.rs
src/data/: errors.rs  mod.rs
src/data/commands/: admin.rs  magic_link.rs  mod.rs  order.rs  todo.rs  user.rs
src/data/queries/: admin.rs  mod.rs  order.rs  todo.rs  user.rs
src/handlers/: errors.rs  fallback.rs  htmx.rs  mod.rs  pagination.rs
src/handlers/actions/: auth.rs  mod.rs  payment.rs  sign_out.rs  todo.rs
src/handlers/dtos/: todo.rs  user.rs
src/handlers/forms/: contact.rs  mod.rs  sign_in.rs  text_analyzer.rs  todo.rs
src/handlers/pages/: checkout.rs  dashboard.rs  mod.rs  quote.rs  result.rs  root.rs  sign_in.rs  text_analyzer.rs  todos.rs
src/init/: database.rs  logging.rs  mod.rs  session.rs
src/middlewares/: auth.rs  http_tracing.rs  mod.rs  require_admin.rs  security_headers.rs  session.rs
src/models/: admin.rs  contact.rs  mod.rs  order.rs  pagination.rs  user.rs
src/routes/: actions.rs  admin.rs  forms.rs  mod.rs  pages.rs
src/views/: mod.rs
src/views/components/: flash.rs  form.rs  mod.rs
src/views/layout/: base.rs  navigation.rs
src/views/pages/: checkout.rs  dashboard.rs  mod.rs  not_found.rs  quote.rs  result.rs  root.rs  server_error.rs  (+3 more)
(+19 files in other folders)
